[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["zengxiaolou <44358506+zengxiaolou@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
aiohttp = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
